# DEDA_LLM_Spatial_Hotelling

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/: explore_market.py
configs/: config.yaml  default.yaml  llm_config.yaml  qlearning_config.yaml
configs/agents/: chain_ceo.yaml  entrant_llm.yaml  llm_duopoly.yaml  qlearning_duopoly.yaml
configs/city/: berlin_mitte.yaml  unit_square.yaml
configs/env/: berlin_inner_ring.yaml
configs/groups/: competition_neighbourhood.yaml  competition_only.yaml  neighbourhood_only.yaml  no_groups.yaml
configs/simulation/: phases.yaml  triggers.yaml
configs/sweep/: alpha_beta.yaml  transport_cost.yaml
docs/: agent_simulation_technical_report.md  crs-handling-and-known-issues.md  spatial-module-reference.md
docs/decisions/: ADR-001-src-layout.md  ADR-002-llm-litellm-instructor.md  ADR-003-pettingzoo-env.md  ADR-004-per-store-independent-qtables.md  ADR-005-relative-action-space.md  ADR-006-three-phase-simulation.md  ADR-007-llm-calls-not-batched.md  ADR-008-gamma-fixed-globally.md  ADR-009-group-division-extensibility.md  ADR-010-entrant-qtable-initialisation.md  ADR-011-entrant-response-function.md  ADR-012-inner-ring-not-pankow.md
docs/theory/: full_economic_model.md  hotelling_model.md
experiments/: __init__.py  general_hotelling.py  llm_competition.py  spatial_real_data.py
hotelling/: __init__.py
hotelling/agents/: __init__.py  base_agent.py  llm_agent.py  naive_agent.py  qlearning_agent.py
hotelling/core/: __init__.py  city.py  consumer.py  firm.py  market.py
hotelling/simulation/: __init__.py  config.py  engine.py  metrics.py
hotelling/spatial/: __init__.py  business_locations.py  map_loader.py  population.py
hotelling/utils/: __init__.py  data_io.py  logging.py
hotelling/visualization/: __init__.py  interactive.py  plots.py
notebooks/: 01_getting_started.ipynb  02_general_simulation.ipynb  03_llm_agents.ipynb  04_spatial_analysis.ipynb  05_results_analysis.ipynb  test.ipynb
report/: README.md  grid_map_interactive.html
report/figures/: .gitkeep
src/hotelling/: __init__.py  cli.py
src/hotelling/agents/: __init__.py  base.py  chain_ceo.py  deep_q.py  entrant_llm.py  llm.py  myopic.py  qlearning.py  random_agent.py  store_rl.py
src/hotelling/analysis/: __init__.py  irf.py  metrics.py  results_db.py
src/hotelling/core/: __init__.py  city.py  equilibrium.py  firm.py  market.py
src/hotelling/env/: __init__.py  market_env.py
src/hotelling/envelope/: __init__.py  envelope.py  groups.py
src/hotelling/envelope/divisions/: __init__.py  competition.py  neighbourhood.py
src/hotelling/llm/: __init__.py  client.py  schemas.py
src/hotelling/llm/prompts/: entry.jinja  pricing.jinja  state_ceo.jinja  state_entrant.jinja  system.jinja  system_ceo.jinja  system_entrant_entry.jinja  system_entrant_reassess.jinja
src/hotelling/simulation/: __init__.py  engine.py  phases.py  recorder.py  runner.py  triggers.py
src/hotelling/spatial/: __init__.py  admin.py  boundaries.py  census.py  city_data.py  distance.py  exe.py  grid.py  osm.py  raster.py
src/hotelling/utils/: __init__.py  logging.py  seeding.py
src/hotelling/viz/: __init__.py  animation.py  interactive.py  static.py
tests/: __init__.py  conftest.py
tests/integration/: test_3phase_runner.py  test_env.py  test_phase0_burnin.py  test_phase1_entry.py
tests/test_agents/: test_agents.py
tests/test_core/: __init__.py  test_city.py
tests/test_simulation/: test_engine.py
tests/unit/: conftest.py  test_agents.py  test_core.py  test_envelope_validation.py  test_equilibrium.py  test_group_assignment.py  test_llm_schemas.py  test_market_clearing.py  test_qtable_relative_actions.py  test_recorder.py  test_response_function_executor.py  test_spatial.py  test_trigger_system.py  test_utils.py
