[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotelling"
version = "0.1.0"
description = "Python toolkit for LLM-driven 2-D Hotelling spatial competition simulations"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["hotelling", "spatial competition", "LLM", "reinforcement learning", "economics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
]
spatial = [
    "geopandas>=0.14",
    "rasterio>=1.3",
    "shapely>=2.0",
]
viz = [
    "matplotlib>=3.8",
    "plotly>=5.18",
]
notebooks = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "tqdm>=4.0",
]
yaml = [
    "pyyaml>=6.0",
]
all = [
    "hotelling[llm,spatial,viz,notebooks,yaml]",
]

[project.urls]
Repository = "https://github.com/jendrkk/DEDA_LLM_Spatial_Hotelling"

[tool.setuptools.packages.find]
include = ["hotelling*"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["hotelling"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true

# ---------------------------------------------------------------------------
# Ruff (linting + formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
