[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotelling"
version = "0.1.0"
description = "Python toolkit for LLM-driven 2-D Hotelling spatial competition simulations"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["hotelling", "spatial competition", "LLM", "reinforcement learning", "economics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
llm = [
    "litellm>=1.35",
    "instructor>=1.3",
    "openai>=1.30",
]
spatial = [
    "geopandas>=0.14",
    "rasterio>=1.3",
    "shapely>=2.0",
    "pyproj>=3.6",
    "osmnx>=1.9",
]
viz = [
    "matplotlib>=3.8",
    "plotly>=5.20",
    "folium>=0.16",
    "pydeck>=0.8",
    "imageio>=2.34",
]
rl = [
    "torch>=2.2",
    "gymnasium>=0.29",
    "pettingzoo>=1.24",
]
db = [
    "duckdb>=0.10",
    "pyarrow>=14.0",
]
cli = [
    "typer>=0.12",
]
notebooks = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "tqdm>=4.0",
    "marimo>=0.6",
]
all = [
    "hotelling[llm,spatial,viz,rl,db,cli,notebooks]",
]

[project.scripts]
hotelling = "hotelling.cli:main"

[project.urls]
Repository = "https://github.com/jendrkk/DEDA_LLM_Spatial_Hotelling"

# ---------------------------------------------------------------------------
# Setuptools src layout
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]
include = ["hotelling*"]

[tool.setuptools.package-data]
"hotelling.llm" = ["prompts/*.jinja"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["hotelling"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true

# ---------------------------------------------------------------------------
# Ruff (linting + formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PLC"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
